--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "jquery": "*",
     "underscore": "*",
     "handlebars": "*",
-    "requirejs-text": "*"
+    "requirejs-text": "*",
+    "backbone-forms": "*"
   }
 }
