AC - 62, List buyer

--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,7 @@
     "underscore": "*",
     "handlebars": "*",
     "requirejs-text": "*",
-    "backbone-forms": "*",
+    "backbone-forms": "master",
     "backbone-relational": "*",
     "layoutmanager": "*",
     "backbone-validation": "*"
