--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     "backbone-relational": "*",
     "layoutmanager": "*",
     "backbone-validation": "*",
-    "backgrid-select-all": ""
+    "backgrid-select-all": "",
+    "backbone-model-file-upload": "https://github.com/homeslicesolutions/backbone-model-file-upload.git"
   }
 }
