--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
     "layoutmanager": "*",
     "backbone-validation": "*",
     "backgrid-select-all": "",
-    "backbone-model-file-upload": "https://github.com/homeslicesolutions/backbone-model-file-upload.git"
+    "backbone-model-file-upload": "https://github.com/homeslicesolutions/backbone-model-file-upload.git",
+    "blueimp-file-upload": "*"
   }
 }
