--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,8 @@
     "requirejs" : "*",
     "bootstrap": "~3.1.1",
     "backbone": "*",
-    "backbone-pageable": "*",
-    "backgrid-paginator": "*",
+    "backbone.paginator": "2.0.2",
+    "backgrid-paginator": "master",
     "backgrid": "*",
     "require-css": "*",
     "require-less": "*",
