--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ results
 node_modules/
 bower_components/
 
+
 nbproject
 *sublime*
 docs
@@ -25,3 +26,6 @@ coverage/
 
 out/
 
+
+development/libs/*
+development/libs
