- Clean up the way DataTables works for user table - Cleaned up the way that Bower works. - Fixed el dependency

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "amazingcreditresults.com-frontend",
-  "directory" : "development/libs",
+  "directory": "development/libs",
   "version": "0.1.0",
   "authors": [
     "Anatoliy Zaslavskiy <adz@nycitt.com>"
@@ -20,7 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs" : "*",
+    "requirejs": "*",
     "bootstrap": "~3.1.1",
     "backbone": "*",
     "backbone.paginator": "2.0.2",
@@ -39,6 +39,7 @@
     "backbone-validation": "*",
     "backgrid-select-all": "",
     "backbone-model-file-upload": "https://github.com/homeslicesolutions/backbone-model-file-upload.git",
-    "blueimp-file-upload": "*"
+    "blueimp-file-upload": "*",
+    "backbone-deep-model": "~0.10.4"
   }
 }
