--- a/development/package.json
+++ b/development/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "amazingcreditresults-frontend",
+  "name": "ML",
   "version": "0.1.0",
   "dependencies": {
     "bower-requirejs": "~1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-qunit": "~0.2.2",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-minified": "0.0.6",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-usemin": "~0.1.12"
   }
 }
