--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,16 @@
     "require-css": "~0.1.5",
     "require-less": "~0.1.2",
     "bootstrap": "~3.2.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "backbone-forms": "~0.14.0",
+    "marionette": "~2.1.0",
+    "require-handlebars-plugin": "~0.8.1",
+    "handlebars": "~1.3.0",
+    "requirejs-hbs": "~0.1.1",
+    "requirejs-text": "~2.0.12",
+    "backbone-validation": "~0.9.1"
+  },
+  "resolutions": {
+    "jquery": "~2.1.1"
   }
 }
