--- a/bower.json
+++ b/bower.json
@@ -35,9 +35,13 @@
     "requirejs-text": "~2.0.12",
     "backbone-validation": "~0.9.1",
     "moment": "~2.8.2",
-    "moment-duration-format": "~1.3.0"
+    "moment-duration-format": "~1.3.0",
+    "backbone.paginator": "~2.0.2",
+    "backgrid-paginator": "~0.3.5",
+    "backgrid": "~0.3.5"
   },
   "resolutions": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "underscore": "~1.6.0"
   }
 }
