--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,9 @@
     "moment-duration-format": "~1.3.0",
     "backbone.paginator": "~2.0.2",
     "backgrid-paginator": "~0.3.5",
-    "backgrid": "~0.3.5"
+    "backgrid": "~0.3.5",
+    "backbone-deep-model": "~0.10.4",
+    "bootstrap-datepicker": "~1.3.0"
   },
   "resolutions": {
     "jquery": "~2.1.1",
