--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "bootstrap-datepicker": "~1.3.0",
     "numeral": "~1.5.3",
     "backgrid-select2-cell": "~0.3.5",
-    "jquery-color": "~2.1.2"
+    "jquery-color": "~2.1.2",
+    "masonry": "~3.1.5"
   },
   "resolutions": {
     "jquery": "~2.1.1",
