--- a/ng-acr/package.json
+++ b/ng-acr/package.json
@@ -1,31 +1,36 @@
 {
-	"name": "angular-requirejs-seed",
-	"version": "0.2.0",
-	"description": "AngularJS seed project modified for requireJS support.",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/tnajdek/angular-requirejs-seed.git"
-	},
-	"license": "MIT",
-	"directories": {
-		"test": "test"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Tom Najdek <tom@doppnet.com>",
-	"readmeFilename": "README.md",
-	"gitHead": "22263bfe493ebc74437c80fc4b4d37c24d1aa6f4",
-	"devDependencies": {
-		"karma-script-launcher": "~0.1.0",
-		"karma-chrome-launcher": "~0.1.0",
-		"karma-firefox-launcher": "~0.1.0",
-		"karma-html2js-preprocessor": "~0.1.0",
-		"karma-jasmine": "~0.1.3",
-		"karma-requirejs": "~0.2.0",
-		"karma-coffee-preprocessor": "~0.2.0",
-		"karma-phantomjs-launcher": "~0.1.0",
-		"karma": ">=0.10.4",
-		"karma-ng-scenario": "~0.1.0"
-	}
+  "name": "angular-requirejs-seed",
+  "version": "0.2.0",
+  "description": "AngularJS seed project modified for requireJS support.",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tnajdek/angular-requirejs-seed.git"
+  },
+  "license": "MIT",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Tom Najdek <tom@doppnet.com>",
+  "readmeFilename": "README.md",
+  "gitHead": "22263bfe493ebc74437c80fc4b4d37c24d1aa6f4",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-haml2html": "^0.3.0",
+    "karma": ">=0.10.4",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.2.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-requirejs": "~0.2.0",
+    "karma-script-launcher": "~0.1.0"
+  }
 }
