--- a/ng-acr/bower.json
+++ b/ng-acr/bower.json
@@ -20,6 +20,7 @@
     "requirejs-text": "~2.0.10",
     "html5-boilerplate": "~4.3.0",
     "ng-table": "~0.3.3",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "humane-js": "~3.2.2"
   }
 }
